--- a/WebApiCoreDemo/appsettings.json
+++ b/WebApiCoreDemo/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=WebAPI;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=tcp:axhussain.database.windows.net,1433;Initial Catalog=WebAPI;Persist Security Info=False;User ID=axadmin;Password=Hu55a1n!;MultipleActiveResultSets=true;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "Logging": {
     "LogLevel": {
