Added the UserSecrets package and removed Connection Strings for appsettings.json

--- a/WebApiCoreDemo/appsettings.Development.json
+++ b/WebApiCoreDemo/appsettings.Development.json
@@ -1,5 +1,6 @@
 {
   "ConnectionStrings": {
+    "AzureWebApiDb": "",
     "DefaultConnection": "Server=localhost;Database=WebAPI;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
