--- a/WebApiCoreDemo/appsettings.json
+++ b/WebApiCoreDemo/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=tcp:axhussain.database.windows.net,1433;Initial Catalog=WebAPI;Persist Security Info=False;User ID=axadmin;Password=Hu55a1n!;MultipleActiveResultSets=true;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    //Actual conn string stored in secrets.json. Ref: Microsoft.Extensions.SecretManager.Tools
+    "AzureWebApiDb": ""
   },
   "Logging": {
     "LogLevel": {
